12-kubernetes-05-network-02/service-backend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-backend
spec:
  selector:
    app: deployment-backend
  ports:
    - name: multitool-http
      port: 9002
      protocol: TCP
      targetPort: 8080
