12-kubernetes-05-network-02/service-frontend.yml
---
apiVersion: v1
kind: Service
metadata:
  name: service-frontend
spec:
  selector:
    app: deployment-frontend
  ports:
    - name: nginx-http
      port: 9001
      protocol: TCP
      targetPort: 80
